contagem de palavras mais completa

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
                 <div class="containerPainel" >
                     <label for="textoPainel" ></label>
-                    <textarea class="form-control" rows="5" id="textoPainel" name="TextoArea" placeholder="Digite aqui..."></textarea>
+                    <textarea class="form-control" rows="5" id="textoPainel" name="texto" placeholder="Digite aqui..."></textarea>
                 </div>
 
                 <div class="containerBotao">
@@ -94,7 +94,7 @@
                             <li class="list-group-item" id="listarSexo">Sexo: </li>
                             <li class="list-group-item" id="listarIdade">Idade: </li>
                             <li class="list-group-item" id="listarNascimento">Data de Nascimento: </li>
-                            <li class="list-group-item" id="listarTotalPalavras">Total Palavras: </li>
+                            <li class="list-group-item" id="listarTotalPalavras"></li>
                         </ul>
                         <div class="containerBotaoFechar">
                             <button type="button" class="btn btn-danger" id="botaoFecharModal">Fechar</button>
