--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
                 <div class="containerPainel" >
                     <label for="textoPainel" ></label>
-                    <textarea class="form-control" rows="5" id="textoPainel" name="texto" placeholder="Digite aqui..."></textarea>
+                    <textarea class="form-control" rows="5" id="textoPainel" name="texto" placeholder="Digite aqui..." maxlength="10000" required></textarea>
                 </div>
 
                 <div class="containerBotao">
